<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingRight="0dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_weight="1"
        android:paddingTop="20dp"
        android:text="Menu Pedorro"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonlin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/lin1" />

    <Button
        android:id="@+id/buttonlin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/lin2" />

    <Button
        android:id="@+id/butonlin3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tab1" />

    <Button
        android:id="@+id/butonlin4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tab2" />

    <Button
        android:id="@+id/butonlin5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cons1" />

    <Button
        android:id="@+id/butonlin6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cons2" />
</LinearLayout>