<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="0dp"
        android:layout_weight="2"
        android:background="#6058d9"
        android:paddingLeft="15dp"
        android:paddingTop="30dp"
        android:text="@string/titulo"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="100dp"
        android:layout_weight="100"
        android:paddingBottom="20dp"
        app:srcCompat="@drawable/circulo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:paddingLeft="15dp"
        android:text="@string/nombre"
        android:textSize="20sp" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="ToggleButton"
        android:textOff="@string/edpr" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="137dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/inferior1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="138dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/inferior2"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/inferior3"
            android:textAlignment="center" />

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inicio" />

    </LinearLayout>

</LinearLayout>