<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:visibility="visible">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="2"
            android:background="#6058d9"
            android:paddingLeft="15dp"
            android:paddingTop="30dp"
            android:text="@string/titulo"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="226dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="100dp"
            android:layout_weight="500"
            android:paddingBottom="20dp"
            app:srcCompat="@drawable/circulo" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:text="@string/nombre"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="ToggleButton"
            android:textOff="@string/edpr" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="118dp"
            android:layout_weight="1"
            android:text="@string/inferior1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="118dp"
            android:layout_weight="1"
            android:text="@string/inferior2"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="118dp"
            android:layout_weight="1"
            android:text="@string/inferior3"
            android:textAlignment="center" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inicio" />

    </TableRow>

</TableLayout>